@@ -1,3 +1,9 @@
+2007-11-02  Werner Koch  <wk@g10code.com>
+
+	* src/g4wihelp.c (path_add): Remove debug stuff.
+
+	* src/inst-kleopatra.nsi: Adjust location for some DLLs.
+
 2007-10-26  Marcus Brinkmann  <marcus@g10code.de>
 
 	* packages/packages.current: Add libetpan.
